Fix indentation and config file

--- a/config/mongod.conf
+++ b/config/mongod.conf
@@ -13,10 +13,8 @@ systemLog:
 net:
   port: 27017
   bindIp: 0.0.0.0
+  ssl:
+    mode: disabled
 
 processManagement:
-  fork: true
-
-cloud:
-   monitoring:
-      free: off
+  fork: false
